--- a/Copy to SD Card - MKS/Language Packs/language_nl.ini
+++ b/Copy to SD Card - MKS/Language Packs/language_nl.ini
@@ -1,13 +1,13 @@
-#### Language Code:AM
+#### Language Code:NL
 ## Language Version:20210730
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
-label_baudrate:BaudRate
-label_language:Հայերեն
-label_rotate_ui:Rotate UI
-label_terminal_ack:Show ACK in Terminal
-label_persistent_info:Persistent Status Info
+label_baudrate:Baudsnelheid
+label_language:Dutch
+label_rotate_ui:Draai UI
+label_terminal_ack:Laat ACK in Terminal zien
+label_persistent_info:Aanhoudende statusinfo
 label_fan_speed_percent:Fan Speed As Percentage
 label_file_list_mode:Files viewer List Mode
 label_file_sort_by:Sort files by
@@ -17,7 +17,7 @@ label_serial_always_on:Serial Always ON
 label_marlin_fullscreen:Marlin mode in fullscreen
 label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
-label_move_speed:Move speed(X Y Z)
+label_move_speed:Bewegingssnelheid(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
 label_xy_offset_probing:XY Offset Probing Support
 label_z_steppers_alignment:Z Steppers Auto-Alignment
@@ -34,16 +34,16 @@ label_lcd_brightness:Brightness
 label_lcd_idle_brightness:Idle brightness
 label_lcd_idle_time:Idle timeout
 label_block_touch_on_idle:Block touch on idle
-label_knob_led_color:Rotary Knob LED
-label_knob_led_idle:Rotary Knob LED idle
+label_knob_led_color:Draaiknop LED
+label_knob_led_idle:Draaiknop LED inactief
 label_start_gcode_enabled:Start Gcode before print
 label_end_gcode_enabled:End Gcode after print
 label_cancel_gcode_enabled:Cancel Gcode
-label_steps_setting:Steps per mm
+label_steps_setting:Stappen permm
 label_filament_setting:Filament Diameter
-label_maxacceleration:Max Acceleration
+label_maxacceleration:Max Acceleratie
 label_maxfeedrate:Max Feed Rate
-label_acceleration:Acceleration
+label_acceleration:Acceleratie
 label_jerk:Jerk
 label_junction_deviation:Junction Deviation
 label_home_offset:Home Offset
@@ -57,13 +57,13 @@ label_delta_tower_angle:Tower Angle Trim
 label_delta_endstop:Endstop Adjustments
 label_probe_offset:Probe Offset
 label_lin_advance:Linear Advance
-label_current_setting:Driver Current (mA)
+label_current_setting:Driver stroom (mA)
 label_hybrid_threshold:TMC HybridThreshold
-label_bump_sensitivity:TMC bump sensitivity
+label_bump_sensitivity:TMC bump sensitiviteit
 label_mbl_offset:MBL Offset
-label_print_acceleration:Print Acceleration
-label_retract_acceleration:Retract Acceleration
-label_travel_acceleration:Travel Acceleration
+label_print_acceleration:Afdruk Acceleratie
+label_retract_acceleration:Retract Acceleratie
+label_travel_acceleration:Travel Acceleratie
 label_retract_length:Retract length
 label_retract_swap_length:Retract swap length
 label_retract_feedrate:Retract feedrate
@@ -72,97 +72,97 @@ label_recover_length:Extra recover length
 label_swap_recover_length:Extra recover swap length
 label_recover_feedrate:Recover feedrate
 label_swap_recover_feedrate:Swap recover feedrate
-label_save:Save
-label_restore:Restore
+label_save:Bewaren
+label_restore:Herstellen
 label_reset:Reset
-label_eeprom_save_info:Save printer settings to EEPROM?
-label_eeprom_restore_info:Reload settings from EEPROM?
-label_eeprom_reset_info:Reset EEPROM to stock printer settings?
+label_eeprom_save_info:Sla printer instellingen op naar EEPROM?
+label_eeprom_restore_info:Herlaad instellingen van de EEPROM?
+label_eeprom_reset_info:Reset EEPROM naar de standaard printer instellingen?
 label_settings_save:Save settings
-label_settings_restore:Restore settings
-label_settings_reset:Reset default settings
-label_settings_reset_info:Reset all settings to default values?
-label_settings_reset_done:Reset all settings successful.\nPlease restart the device.
-label_page_up:Վերեւ
-label_page_down:Ներքեւ
-label_up:Up
-label_down:Down
-label_next:Next
-label_back:Հետ
-label_inc:Ավելացնել
-label_dec:Նվազեցնել
-label_load:Load
-label_unload:Unload
-label_on:ON
-label_off:OFF
+label_settings_restore:Herstel instellingen
+label_settings_reset:Reset instellingen
+label_settings_reset_info:Reset alle instellingen aar de standaard waardes?
+label_settings_reset_done:Reset van alle instellingen is succesvol gelukt.\nHerstart alstublieft het apparaat.
+label_page_up:Blz omhoog
+label_page_down:Blz omlaag
+label_up:Omhoog
+label_down:Omlaag
+label_next:Volgende
+label_back:Terug
+label_inc:Verhogen
+label_dec:Verlagen
+label_load:Laden
+label_unload:Lossen
+label_on:AAN
+label_off:UIT
 label_auto:AUTO
-label_smart:SMART
-label_slow:Դանդաղ
-label_normal:Նորմալ
-label_fast:Արագ
+label_smart:SLIM
+label_slow:Traag
+label_normal:Normaal
+label_fast:Snel
 label_zero:Zero
-label_half:Կիսատ
-label_full:Ամբողջը
-label_custom:Custom
+label_half:Half
+label_full:Volledig
+label_custom:Aangepast
 label_clear:Clear
-label_default:Default
+label_default:Standaard
 label_start:Start
-label_stop:Դադարեցնել
-label_pause:Կանգնեցնել
-label_resume:Շարունակել
+label_stop:Stop
+label_pause:Pauze
+label_resume:Hervatten
 label_init:Init
-label_disconnect:Անջատել
-label_shut_down:Shut Down
-label_force_shut_down:Force
-label_emergencystop:EM. STOP
-label_preheat:Preheat
-label_preheat_both:Both
-label_cooldown:Cool Down
-label_confirm:Confirm
-label_cancel:Չեղարկել
-label_warning:Warning
-label_continue:Շարունակել
-label_confirmation:Are you sure?
+label_disconnect:Loskoppelen
+label_shut_down:Uitschakelen
+label_force_shut_down:Forceer Afsluiten
+label_emergencystop:NOODSTOP
+label_preheat:Voorverwarmen
+label_preheat_both:Beide
+label_cooldown:Afkoelen
+label_confirm:Bevestig
+label_cancel:Afbreken
+label_warning:Waarschuwing
+label_continue:Verder
+label_confirmation:Weet u het zeker?
 label_status:Status
-label_ready:Պատրաստ
-label_busy:Ծանրաբեռնված է
-label_loading:Բեռնում է...
-label_unconnected:Տպիչը կցված չէ
+label_ready:Gereed
+label_busy:In verwerking ,wacht aub...
+label_loading:Opladen...
+label_unconnected:Geen printer gekoppeld!
 label_info:Info
-label_invalid_value:Invalid value(s)
-label_timeout_reached:Timeout reached!
-label_disconnect_info:Now you can control the printer by your computer!
-label_shutting_down:Shutting down...
-label_wait_temp_shut_down:Wait for the temperature of hotend to be lower than %d℃
-label_power_failed:Տպելը չի ավարտվել, շարունակե՞լ
-label_process_running:Process already running!
-label_process_completed:Process completed!
-label_process_aborted:Process aborted!
+label_invalid_value:Geen correcte waarde/s voorzien!
+label_timeout_reached:Time-out bereikt!
+label_disconnect_info:De printer kan nu door de computer bestuurd worden!
+label_shutting_down:Afsluiten...
+label_wait_temp_shut_down:Wacht tot de temperatuur van de spuitkop lager dan %d℃ is
+label_power_failed:Verder met printen?
+label_process_running:Process bezig!
+label_process_completed:Process voltooid!
+label_process_aborted:Process geannuleerd!
 label_tftsd:TFT SD
-label_read_tftsd_error:TFTSD հիշողության սարքը չկա
-label_tftsd_inserted:Card inserted!
-label_tftsd_removed:Card removed!
+label_read_tftsd_error:TFT SD leesfout!
+label_tftsd_inserted:Kaart geplaatst!
+label_tftsd_removed:Kaart verwijdert!
 label_u_disk:U Disk
-label_read_u_disk_error:Read U Disk error!
-label_u_disk_inserted:U Disk inserted!
-label_u_disk_removed:U Disk removed!
+label_read_u_disk_error:U Disk Leesfout!
+label_u_disk_inserted:U Disk geplaatst!
+label_u_disk_removed:U Disk verwijdert!
 label_onboardsd:OnboardSD
-label_read_onboardsd_error:OnboardSD հիշողության սարքը չկա
-label_filament_runout:Filament runout!
+label_read_onboardsd_error:Onboard SD-kaart leesfout!
+label_filament_runout:filament op!
 label_disable_steppers:Disarm All
-label_xy_unlock:Disarm XY
-label_start_print:Start Printing:\n%s?
-label_stop_print:Stop printing?
-label_is_pause:Unable to extrude when printing.\nPause printing?
-label_m0_pause:Paused by M0 command
+label_xy_unlock:Ontgrendel XY
+label_start_print:Start afdruk:\n%s?
+label_stop_print:Stop afdruk?
+label_is_pause:Kan niet extruderen tijdens printen,\nPauzeer printen?
+label_m0_pause:Gepauseerd door M0 commando
 label_test:Test
-label_deploy:Deploy
-label_stow:Stow
-label_repeat:Repeat
-label_nozzle:Գլխիկ
-label_bed:Տախտակ
-label_chamber:Chamber
-label_fan:Հովացնել
+label_deploy:Gebruiken
+label_stow:Inzetten
+label_repeat:Herhaal
+label_nozzle:Spuitneus
+label_bed:Verwarmd bed
+label_chamber:Kamer
+label_fan:Ventilator
 label_bltouch:BLTouch
 label_touchmi:TouchMi
 label_1_degree:1℃
@@ -185,16 +185,16 @@ label_30_seconds:30 Sec.
 label_60_seconds:1 Min.
 label_120_seconds:2 Min.
 label_300_seconds:5 Min.
-label_white:White
-label_black:Black
-label_blue:Blue
-label_red:Red
-label_green:Green
-label_cyan:Cyan
-label_yellow:Yellow
-label_brown:Brown
-label_gray:Gray
-label_orange:Orange
+label_white:Wit
+label_black:Zwart
+label_blue:Blauw
+label_red:Rood
+label_green:Groen
+label_cyan:Cyaan
+label_yellow:Geel
+label_brown:Bruin
+label_gray:Grijs
+label_orange:Oranje
 label_indigo:Indigo
 label_violet:Violet
 label_magenta:Magenta
@@ -203,31 +203,31 @@ label_lime:Lime
 label_darkblue:DarkBlue
 label_darkgreen:DarkGreen
 label_darkgray:DarkGray
-label_heat:Ջերմություն
-label_move:Շարժել
-label_home:Սկզբնական
-label_print:Տպել
-label_extrude:Հալել
-label_settings:Կարգավորումներ
-label_screen_settings:Screen
+label_heat:Verwarm
+label_move:Verplaats
+label_home:Thuis
+label_print:Print
+label_extrude:Extrudeer
+label_settings:Instellingen
+label_screen_settings:Scherm
 label_machine_settings:Machine
 label_marlin_mode_settings:MarlinMode
-label_feature_settings:Feature
+label_feature_settings:Kenmerk
 label_sound:Sound
-label_rgb_settings:LED Color
-label_rgb_off:LED Off
+label_rgb_settings:LED Kleur
+label_rgb_off:LED Uit
 label_terminal:Terminal
-label_leveling:Leveling
-label_point_1:Point 1
-label_point_2:Point 2
-label_point_3:Point 3
-label_point_4:Point 4
-label_point_5:Point 5
+label_leveling:Nivelleren
+label_point_1:Punt 1
+label_point_2:Punt 2
+label_point_3:Punt 3
+label_point_4:Punt 4
+label_point_5:Punt 5
 label_bed_leveling:Bed Level
-label_bl_complete:Bed Leveling Complete
-label_bl_smart_fill:Missing probe points have been smart filled.\n\nNote: remember to save!
-label_bl_enable:BL: on
-label_bl_disable:BL: off
+label_bl_complete:Bed Leveling voltooid
+label_bl_smart_fill:Missende probe punten zijn slim opgevuld.\n\nNote: Vergeet niet op te slaan!
+label_bl_enable:BL: aan
+label_bl_disable:BL: uit
 label_abl:ABL
 label_bbl:BBL
 label_ubl:UBL
@@ -236,29 +236,29 @@ label_mbl_settings:Mesh Bed Leveling
 label_abl_settings:Auto Bed Leveling
 label_abl_settings_bbl:Bilinear Bed Leveling
 label_abl_settings_ubl:Unified Bed Leveling
-label_abl_settings_ubl_save:Save to slot
-label_abl_settings_ubl_load:Load from slot
-label_abl_slot0:Slot 0
-label_abl_slot1:Slot 1
-label_abl_slot2:Slot 2
-label_abl_slot3:Slot 3
-label_abl_slot_eeprom:Save the mesh to EEPROM to load after reboot?
-label_abl_z:Z Fade
+label_abl_settings_ubl_save:Sla op naar sleuf
+label_abl_settings_ubl_load:Laad van sleuf
+label_abl_slot0:Sleuf 0
+label_abl_slot1:Sleuf 1
+label_abl_slot2:Sleuf 2
+label_abl_slot3:Sleuf 3
+label_abl_slot_eeprom:Onthoud sleuf voor volgende reboot? (sla op in EEPROM)
+label_abl_z:Z vervagen
 label_level_corner:L corner
 label_p_offset:P Offset
 label_h_offset:H Offset
-label_distance:Distance
+label_distance:Afstand
 label_load_unload:Load/Unload
 label_load_unload_short:(Un)Load
-label_touchscreen_adjust:TSC Adjust
-label_more:More
+label_touchscreen_adjust:TSC Aanpassen
+label_more:Meer
 label_screen_info:Info
-label_bg_color:Background color
-label_font_color:Font color
+label_bg_color:achtergrond kleur
+label_font_color:tekst kleur
 label_percentage:Percentage
-label_percentage_speed:Արագություն
-label_percentage_flow:Flow
-label_babystep:Դանդաղ
+label_percentage_speed:Snelheid
+label_percentage_flow:Stromen
+label_babystep:BabyStap
 label_x_inc:X+
 label_y_inc:Y+
 label_z_inc:Z+
@@ -268,34 +268,34 @@ label_z_dec:Z-
 label_x:X
 label_y:Y
 label_z:Z
-label_adjust_title:Էկրանի կարգավորում
-label_adjust_info:Please click on the red dot
-label_adjust_ok:Adjustment Success
-label_adjust_failed:Adjustment failed, Please Try Again.
-label_unifiedmove:Movement
-label_unifiedheat:Heat&Fan
-label_touch_to_exit:Touch anywhere to exit
+label_adjust_title:Touch Screen Calibratie
+label_adjust_info:Klik op de rode punt
+label_adjust_ok:Calibratie Gelukt
+label_adjust_failed:Calibratie Mislukt, Probeer Opnieuw aub
+label_unifiedmove:Beweging
+label_unifiedheat:Verwarm/Ventilator
+label_touch_to_exit:Aanraken om te verlaten
 label_mainmenu:Menu
-label_parameter_setting:Պարամետր
+label_parameter_setting:Parameter
 label_eeprom_settings:EEPROM
 label_leveling_edge_distance:Bed edge distance
 label_tuning:Tuning
 label_pid:PID
 label_pid_title:PID autotune
-label_pid_start_info:PID autotune may take some time to complete.\nContinue?
-label_pid_start_info_2:PID autotune in progress!
-label_pid_start_info_3:Do not touch the screen until completed (green LED ON)!
+label_pid_start_info:PID autotune zal starten. Dit kan een paar minuten duren.\nDoorgaan?
+label_pid_start_info_2:PID autotune is bezig!
+label_pid_start_info_3:Raak het scherm NIET aan totdat deze klaar is (groene LED aan)!
 label_tune_extruder:Tune steps
 label_tune_ext_extrude_100:Ext. 100mm
 label_tune_ext_temp:Extruder tuning | Heat
 label_tune_ext_mark120mm:Mark 120 mm on your fillament.\nPress '%s' when ready.\nMeasure remaining length after extruding.
 label_tune_ext_heatoff:Turn the heater off?
 label_tune_ext_adj_esteps:Adjust E-Steps
-label_tune_ext_esteps_saved:New E-steps applied.\nDon't forget to save it in EEPROM.\nNew value: %0.2f
+label_tune_ext_esteps_saved:New E-steps applied. Don't forget to save it in EEPROM.\nNew value: %0.2f
 label_tune_ext_measured:Length remaining:
 label_tune_ext_old_estep:Old e-steps: %0.2f
 label_tune_ext_new_estep:New e-steps: %0.2f
-label_connection_settings:Connection
+label_connection_settings:Connecties
 label_notifications:Notifications
 label_mesh_editor:Mesh edit
 label_mesh_tuner:Mesh tuner
