--- a/Copy to SD Card - MKS/config.ini
+++ b/Copy to SD Card - MKS/config.ini
@@ -68,26 +68,14 @@
 # General Settings
 #--------------------------------------------------------------------
 
-#### Enable Status Screen
-# If enabled, the Status Screen menu will become the default home screen.
-# If disabled, the Main menu will become the default home screen.
+#### Default Mode
+# Set Marlin/Touch Mode as the default mode at startup.
 #
-# NOTE: Both the Status Screen and Main menus display the current temperature, fan and speeds.
-#       Furthermore, the Status Screen menu provides the status area reporting the printer notifications.
+# NOTE: Mode switching is possible only for Marlin Mode and Touch Mode by a long press of
+#       1.5 seconds on the display or holding down the encorder button for 1.5 seconds.
 #
-#   Options: [disable: 0, enable: 1]
-status_screen:1
-
-#### Baudrate / Connection Speed
-# This baudrate setting is used for serial connection to the printer and other serial
-# hosts like ESP8266.
-#
-# NOTE: 250000 works in most cases, but you might try a lower speed if you commonly
-#       experience drop-outs during host printing.
-#       You may try up to 1000000 to speed up SD file transfer.
-#
-#   Options: [2400: 0, 9600: 1, 19200: 2, 38400: 3, 57600: 4, 115200: 5, 250000: 6, 500000: 7, 1000000: 8]
-baudrate:6
+#   Options: [Marlin Mode: 0, Touch Mode: 1, Blocked Marlin Mode: 2, Blocked Touch Mode: 3]
+default_mode:1
 
 #### Enable Multi-Serials
 # Multi-Serials connected to ESP3D, OctoPrint, Other TFT, etc.
@@ -103,6 +91,64 @@ baudrate:6
 #             7: = 1 + 2 + 4: Enable SERIAL_PORT_2 + SERIAL_PORT_3 + SERIAL_PORT_4]
 multi_serial:0
 
+#### Baudrate / Connection Speed
+# This baudrate setting is used for serial connection to the printer and other serial
+# hosts like ESP8266.
+#
+# NOTE: 250000 works in most cases, but you might try a lower speed if you commonly
+#       experience drop-outs during host printing.
+#       You may try up to 1000000 to speed up SD file transfer.
+#
+#   Options: [2400: 0, 9600: 1, 19200: 2, 38400: 3, 57600: 4, 115200: 5, 250000: 6, 500000: 7, 1000000: 8]
+baudrate:6
+
+#### Inverted Axes (Move, Manual Leveling)
+# Invert axis button function in Move and Manual Leveling menus in order it matches the actual axis movement.
+#
+# NOTE: The Y-axis of different printer (move hotbed or move nozzle) move in different directions.
+#       So Y-axis leveling invert can't follow up invert_axis[Y_AXIS].
+#       We separate a single variable "LY"(Leveling Y-axis) to deal with the y-axis leveling movement direction.
+#
+#   Format: [X<option> Y<option> Z<option> LY<option>]
+#   Options: [disable: 0, enable: 1]
+invert_axis:X0 Y0 Z0 LY0
+
+#### Temperature ACK In Terminal
+# Show temperature ACK in Terminal menu.
+#   Options: [disable: 0, enable: 1]
+terminal_ack:0
+
+#### Persistent Temperature Info
+# Show persistent temperature info in all menus.
+#   Options: [disable: 0, enable: 1]
+persistent_info:1
+
+#### Notification M117
+# If enabled, any notification received from Marlin through "//action:notification" is also
+# stored on the notification screen. The notification screen reporting the history of the
+# received notifications is displayed pressing on the notification bar.
+#
+# NOTE: Marlin notifications are also always displayed on the Status Screen menu.
+#       Furthermore, they are also displayed on the notification bar as toast messages
+#       in case the current menu is not the Status Screen menu.
+#
+#   Options: [disable: 0, enable: 1]
+notification_m117:0
+
+#### Emulate M600
+# The TFT intercepts the M600 gcode (filament change) and emulates the handling logic
+# otherwise provided by Marlin firmware.
+#
+# NOTE: Enable it, in case Marlin firmware does not properly support M600 on the mainboard.
+#
+#   Options: [disable: 0, enable: 1]
+emulate_m600:0
+
+
+#--------------------------------------------------------------------
+# UI Settings
+#--------------------------------------------------------------------
+
 #### Default Touch Mode Language
 # Select the language to display on the LCD while in Touch Mode.
 #
@@ -113,8 +159,19 @@ multi_serial:0
 #   Options: [Primary Language (english): 0, Secondary Language: 1]
 language:0
 
+#### Enable Status Screen
+# Select the default home screen while in Touch Mode.
+# If enabled, the Status Screen menu will become the default home screen.
+# If disabled, the Main menu will become the default home screen.
+#
+# NOTE: Both the Status Screen and Main menus display the current temperature, fan and speeds.
+#       Furthermore, the Status Screen menu provides the status area reporting the printer notifications.
+#
+#   Options: [disable: 0, enable: 1]
+status_screen:1
+
 #### Default Touch Mode Colors
-# Set colors used in touchscreen mode.
+# Set colors used in Touch Mode.
 #
 # NOTE: Select an option from the provided list or set the color (RGB888 format) hex value directly
 #       (start with “0x”), such as: Red: 0xFF0000, Green: 0x00FF00, Blue: 0x0000FF.
@@ -165,26 +222,17 @@ terminal_color_scheme:2
 #   Options: [disable: 0, enable: 1]
 rotate_ui:0
 
-#### Temperature ACK In Terminal
-# Show temperature ACK in Terminal menu.
-#   Options: [disable: 0, enable: 1]
-terminal_ack:0
-
-#### Inverted Axes (Move, Manual Leveling)
-# Invert axis button function in Move and Manual Leveling menus in order it matches the actual axis movement.
+#### Notification Style For ACK Messages
+# Set the notification style to use for displaying the ACK messages which start with "echo:".
 #
-# NOTE: The Y-axis of different printer (move hotbed or move nozzle) move in different directions.
-#       So Y-axis leveling invert can't follow up invert_axis[Y_AXIS].
-#       We separate a single variable "LY"(Leveling Y-axis) to deal with the y-axis leveling movement direction.
+# NOTE: The OFF value is applied to any ACK message type (e.g. even to known echo ACK).
+#       It means that any kind of ACK message is silently discarded.
 #
-#   Format: [X<option> Y<option> Z<option> LY<option>]
-#   Options: [disable: 0, enable: 1]
-invert_axis:X0 Y0 Z0 LY0
-
-#### Persistent Temperature Info
-# Show persistent temperature info on all menus.
-#   Options: [disable: 0, enable: 1]
-persistent_info:1
+#   Options: [OFF: 0, POPUP: 1, TOAST: 2]
+#     OFF:   No notification. The message is ignored.
+#     POPUP: Display a popup window for user confirmation.
+#     TOAST: A non-blocking Toast notification is displayed for few seconds. No user interaction is needed.
+ack_notification:1
 
 #### Fan Speed As Percentage
 # Show fan speed as percentage. If disabled fan speeed will be displayed as PWM values.
@@ -204,39 +252,6 @@ files_list_mode:1
 #   Options: [Date Newest First: 0, Date Oldest First: 1, Name Ascending: 2, Name Descending: 3]
 files_sort_by:0
 
-#### Notification Style For ACK Messages
-# Set the notification style to use for displaying the ACK messages which start with "echo:".
-#
-# NOTE: The OFF value is applied to any ACK message type (e.g. even to known echo ACK).
-#       It means that any kind of ACK message is silently discarded.
-#
-#   Options: [OFF: 0, POPUP: 1, TOAST: 2]
-#     OFF:   No notification. The message is ignored.
-#     POPUP: Display a popup window for user confirmation.
-#     TOAST: A non-blocking Toast notification is displayed for few seconds. No user interaction is needed.
-ack_notification:1
-
-#### Notification M117
-# If enabled, any notification received from Marlin through "//action:notification" is also
-# stored on the notification screen. The notification screen reporting the history of the
-# received notifications is displayed pressing on the notification bar.
-#
-# NOTE: Marlin notifications are also always displayed on the Status Screen menu.
-#       Furthermore, they are also displayed on the notification bar as toast messages
-#       in case the current menu is not the Status Screen menu.
-#
-#   Options: [disable: 0, enable: 1]
-notification_m117:0
-
-#### Emulate M600
-# The TFT intercepts the M600 gcode (filament change) and emulates the handling logic
-# otherwise provided by Marlin firmware.
-#
-# NOTE: Enable it, in case Marlin firmware does not properly support M600 on the mainboard.
-#
-#   Options: [disable: 0, enable: 1]
-emulate_m600:0
-
 #### Progress Numeric Display Mode During Print
 # This sets the default display type for print progress numeric display.
 # It can be changed during print by pressing the hourglass icon.
@@ -253,15 +268,6 @@ prog_disp_type:2
 # Marlin Mode Settings (only for TFT24 V1.1 & TFT28/TFT35/TFT43/TFT50/TFT70 V3.0)
 #--------------------------------------------------------------------
 
-#### Default Mode
-# Set Marlin/Touch mode as the default mode at startup.
-#
-# NOTE: Mode switching is possible only for Marlin Mode and Touch Mode by a long press of
-#       1.5 seconds on the display or holding down the encorder button for 1.5 seconds.
-#
-#   Options: [Marlin Mode: 0, Touch Mode: 1, Blocked Marlin Mode: 2, Blocked Touch Mode: 3]
-default_mode:1
-
 #### Serial Always ON
 # Keep UART (serial communication) alive in Marlin Mode.
 # Allows seamless OctoPrint UART connection to the TFT's UART/serial expansion port
@@ -270,7 +276,7 @@ default_mode:1
 serial_always_on:0
 
 #### Default Marlin Mode Background & Font Colors
-# Set colors used in Marlin mode.
+# Set colors used in Marlin Mode.
 #
 # NOTE: Select an option from the provided list or set the color (RGB888 format) hex value directly
 #       (start with “0x”), such as: Red: 0xFF0000, Green: 0x00FF00, Blue: 0x0000FF.
