--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -1,5 +1,5 @@
 #### Language Code:HU
-## Language Version:20210730
+## Language Version:20210803
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -33,7 +33,7 @@ label_heater_sound:Fűtés hang
 label_lcd_brightness:Fényerősség
 label_lcd_idle_brightness:LCD Halványítás
 label_lcd_idle_time:LCD Halványítási idő
-label_block_touch_on_idle:Block touch on idle
+label_block_touch_on_idle:Érintés tiltás alapjáraton
 label_knob_led_color:Forgatógomb LED
 label_knob_led_idle:Forgatógomb tétlen
 label_start_gcode_enabled:Kezdő G-Kód
