--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -33,7 +33,7 @@ label_heater_sound:Notification de chauffe
 label_lcd_brightness:Luminosité
 label_lcd_idle_brightness:Diminution luminosité
 label_lcd_idle_time:Durée avant diminution
-label_block_touch_on_idle:Block touch on idle
+label_block_touch_on_idle:Bloquer touches en veille
 label_knob_led_color:LED du bouton rotatif
 label_knob_led_idle:Veille du bouton rotatif
 label_start_gcode_enabled:Gcode avant l'impression
