--- a/Copy to SD Card - MKS/config.ini
+++ b/Copy to SD Card - MKS/config.ini
@@ -513,12 +513,15 @@ level_feedrate:XY6000 Z6000
 invert_axis:X0 Y0 Z0 LY0
 
 #### XY Offset Probing Support (Probe Offset)
-# Used by the Probe Offset menu for the Z offset tuning process.
+# Used by the Probe Offset menu for the Z offset tuning process in case Marlin is configured
+# to use the probe for Z-axis homing (e.g. USE_PROBE_FOR_Z_HOMING enabled on Marlin).
 # It allows to move the nozzle to the defined (on Marlin firmware) XY probing point set for homing.
 # The nozzle is moved applying the XY probe offset configured on Marlin firmware.
 #
-# NOTE: Disable it in case the XY probing point set for homing is not reacheable by the nozzle
-#       (e.g. due to HW limitations/constraints or printer specific configuration).
+# NOTE: Disable it in case Marlin is not configured to use the probe for Z-axis homing
+#       (e.g. USE_PROBE_FOR_Z_HOMING disabled on Marlin) or the XY probing point set for
+#       homing is not reacheable by the nozzle (e.g. due to HW limitations/constraints
+#       or printer specific configuration).
 #
 #   Options: [disable: 0, enable: 1]
 xy_offset_probing:1
