--- a/Copy to SD Card root directory to update/Language Packs/language_de.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_de.ini
@@ -1,5 +1,5 @@
 #### Language Code:DE
-## Language Version:20210816
+## Language Version:20210817
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
@@ -29,10 +29,10 @@ label_touch_sound:Eingabetöne
 label_toast_sound:Toasts-Töne
 label_alert_sound:Popups & Alarme
 label_heater_sound:Ton bei erreichter Temp.
-label_lcd_brightness:Helligkeit
-label_lcd_idle_brightness:LCD Helligkeit im Standby
-label_lcd_idle_time:LCD Timer im Standby
-label_block_touch_on_idle:Blockiere Touch im Idle
+label_lcd_brightness:LCD-Helligkeit
+label_lcd_idle_brightness:LCD-Timeout-Helligkeit
+label_lcd_idle_time:LCD-Timeout
+label_block_touch_on_idle:Kein Touch im Standby
 label_knob_led_color:Drehknopf LED Farbe
 label_knob_led_idle:Drehknopf LED idle Farbe
 label_start_gcode_enabled:Gcode vor Druck
