--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -485,7 +485,7 @@ pause_feedrate:XY6000 Z6000 E600
 #   Value range: [min: 0, max: 2000]
 level_edge_distance:20
 
-## Z Position (Manual, Mesh Leveling, Probe/Home Offset, Mesh Tuner)
+## Leveling Z Position (Manual, Mesh Leveling, Probe/Home Offset, Mesh Tuner)
 # For manual leveling and MBL, lower z axis to this absolute position after reaching a leveling point.
 # For Probe/Home Offset and ABL in Mesh Tuner, raise z axis by this relative position after reaching a leveling point.
 #   Unit: [position in mm]
@@ -516,23 +516,26 @@ level_feedrate:XY6000 Z6000
 #   Options: [disable: 0, enable: 1]
 invert_axis:X0 Y0 Z0 LY0
 
-#### XY Offset Probing Support (Probe Offset)
-# Used by the Probe Offset menu for the Z offset tuning process in case Marlin firmware is configured
-# to use the probe for Z-axis homing (e.g. USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware).
-# It allows to move the nozzle to the defined (in Marlin firmware) XY probing point set for homing.
-# The nozzle is moved applying the XY probe offset configured in Marlin firmware.
+#### Probing After Homing (Probe Offset)
+# Used by the Probe Offset menu for the Z offset tuning process.
+# If enabled, after homing a probing in the center of the bed is performed and then the nozzle
+# is moved to the XY probing point.
+# If disabled, after homing the nozzle is moved directly to the XY honing point.
 #
-# NOTE: Disable it in case Marlin firmware is not configured to use the probe for Z-axis homing
-#       (e.g. USE_PROBE_FOR_Z_HOMING disabled in Marlin firmware) or the XY probing point set
-#       for homing is not reacheable by the nozzle (e.g. due to HW limitations/constraints or
-#       printer specific configuration).
+# NOTES:
+#   - Enable it in case Marlin firmware is not configured to use the probe for Z-axis homing
+#     (e.g. USE_PROBE_FOR_Z_HOMING disabled in Marlin firmware) or the XY probing point set
+#     for homing is not reacheable by the nozzle (e.g. due to HW limitations/constraints or
+#     printer specific configuration).
+#   - Disable it in case Marlin firmware is configured to use the probe for Z-axis homing (e.g.
+#     USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware).
 #
 #   Options: [disable: 0, enable: 1]
-xy_offset_probing:1
+probing_after_homing:1
 
-#### Z Raise Probing Support (Probe Offset, Mesh Editor)
+#### Probing Z Raise (Probe Offset, Mesh Editor)
 # Used by the Probe Offset / Mesh Editor menu for the Z offset / Z height tuning process.
-# Z height to raise / drop after homing (G28) before starting to probe a point.
+# Raise / drop Z by this relative value after homing (G28) before starting to probe a point.
 #
 # NOTES:
 #   - It MUST BE a value >= 0 (e.g. 20) for a Cartesian printer to avoid crashing into the bed.
@@ -540,7 +543,7 @@ xy_offset_probing:1
 #
 #   Unit: [distance in mm]
 #   Value range: [min: -2000, max: 2000]
-z_raise_probing:20
+probing_z_raise:20
 
 #### Z Steppers Auto-Alignment (ABL)
 # It allows to align multiple Z stepper motors using a bed probe by probing one position per stepper.
