--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -463,7 +463,7 @@ pause_retract:R15 P16
 pause_pos:X10 Y10
 
 ## Pause Z Raise
-# Raise Z axis this much relative to the current layer height.
+# Raise Z axis by this value relative to the current layer height.
 #   Unit: [distance in mm]
 #   Value range: [min: 0, max: 2000]
 pause_z_raise:10
@@ -486,14 +486,14 @@ pause_feedrate:XY6000 Z6000 E600
 level_edge_distance:20
 
 ## Leveling Z Position (Manual, Mesh Leveling, Probe/Home Offset, Mesh Tuner)
-# For manual leveling and MBL, lower z axis to this absolute position after reaching a leveling point.
-# For Probe/Home Offset and ABL in Mesh Tuner, raise z axis by this relative position after reaching a leveling point.
+# For manual leveling and MBL, lower Z axis to this absolute position after reaching a leveling point.
+# For Probe/Home Offset and ABL in Mesh Tuner, raise Z axis by this relative position after reaching a leveling point.
 #   Unit: [position in mm]
 #   Value range: [min: 0, max: 2000]
 level_z_pos:0.2
 
 ## Leveling Z Raise (Manual, Mesh Leveling)
-# Raise Z this much before moving to another point during leveling/probing procedures.
+# Raise Z axis by this relative value before moving to another point during leveling/probing procedures.
 #   Unit: [distance in mm]
 #   Value range: [min: 0, max: 2000]
 level_z_raise:10
@@ -535,7 +535,7 @@ probing_after_homing:1
 
 #### Probing Z Raise (Probe Offset, Mesh Editor)
 # Used by the Probe Offset / Mesh Editor menu for the Z offset / Z height tuning process.
-# Raise / drop Z by this relative value after homing (G28) before starting to probe a point.
+# Raise / drop Z axis by this relative value after homing (G28) before starting to probe a point.
 #
 # NOTES:
 #   - It MUST BE a value >= 0 (e.g. 20) for a Cartesian printer to avoid crashing into the bed.
